2010-07-09  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Load Rcpp more quietly

2010-07-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample3.rcpp: Simpler with new Rcpp API
	* inst/examples/standard/rinside_sample4.rcpp: Idem

2010-06-16  Romain Francois <romain@r-enthusiasts.com>

	* inst/examples/standard/rinside_sample9.cpp: new example illustrating
	how to expose a C++ function to the embedded R

	* inst/examples/standard/rinside_module_sample0.cpp: new example illustrating
	how to use an Rcpp module from RInside

	* inst/include/*.h: moved the headers to include so that there is only one copy

	* inst/include/MemBuf.h: change from signature of add to use
	const std::string& instead of const char*

	* src/RInside.cpp: loading the Rcpp package

2010-04-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/MemBuf.cpp: Added #include <string.h> so that even Solaris sees
	  strlen() -- with thanks to Brian Ripley

	* src/Makefile: Remove -Wall option which Solaris cc does not
	  support -- with thanks to Brian Ripley

2010-04-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Add #ifdef to Callback code to break on Windows

2010-03-26  Romain Francois <romain@r-enthusiasts.com>

	* src/RInside.h: the Proxy class is moved inside RInside and
  	  parseEval now returns a Proxy so that the proxy class does its job
	  implicitely

	* inst/examples/standard/rinside_sample8.cpp: simplify the example to
	  implicit use of the Proxy class

2010-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.h: New Proxy class with operator T() to borrow
	  Rcpp's automatic wrappers
	* inst/examples/standard/rinside_sample8.cpp: Use Proxy()

2010-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increase Version: to 0.2.2

	* .Rbuildignore: Added to exclude volatile Doxygen-generated docs
	   from, zip-archives will be made available as for Rcpp

2010-03-20  Dirk Eddelbuettel  <edd@debian.org>
