@@ -55,19 +55,19 @@ RInside::RInside()
 	: callbacks(0)
 #endif
 {
-	initialize( 0, 0 );
+    initialize( 0, 0, false );
 }
 
-RInside::RInside(const int argc, const char* const argv[]) 
+RInside::RInside(const int argc, const char* const argv[], const bool loadRcpp)
 #ifdef RINSIDE_CALLBACKS 
 : callbacks(0)
 #endif 
 {
-initialize( argc, argv ); 
+    initialize( argc, argv, loadRcpp ); 
 }
 
 // TODO: use a vector<string> would make all this a bit more readable 
-void RInside::initialize(const int argc, const char* const argv[]){
+void RInside::initialize(const int argc, const char* const argv[], const bool loadRcpp) {
     logTxt("RInside::ctor BEGIN", verbose);
 
     if( instance_ ){
@@ -120,12 +120,13 @@ void RInside::initialize(const int argc, const char* const argv[]){
     
     autoloads();    		// Force all default package to be dynamically required */
 
-    // load Rcpp
-    //Rf_eval( Rf_mkString("suppressMessages(library(Rcpp))"), R_GlobalEnv ); 
-    Rf_eval(Rf_lang2(Rf_install( "suppressMessages" ), 
-		     Rf_lang2(Rf_install( "require" ), Rf_mkString("Rcpp"))),
-	    R_GlobalEnv);
-    
+    // if asked for, load Rcpp 
+    if (loadRcpp) {
+	Rf_eval(Rf_lang2(Rf_install( "suppressMessages" ), 
+			 Rf_lang2(Rf_install( "require" ), Rf_mkString("Rcpp"))),
+		R_GlobalEnv);
+    }
+
     if ((argc - optind) > 1){    	// for argv vector in Global Env */
 	Rcpp::CharacterVector s_argv( argv+(1+optind), argv+argc );
 	assign(s_argv, "argv");
